--- a/Income.xaml
+++ b/Income.xaml
@@ -24,6 +24,8 @@
             <Button Name="IncomeButton" Content="Income" Width="100" Margin="5" Click="IncomeButton_Click" Background="LightGray"/>
             <Button Name="ExpensesButton" Content="Expenses" Width="100" Margin="5" Click="ExpensesButton_Click"/>
             <Button Name="SavingsButton" Content="Savings" Width="100" Margin="5" Click="SavingsButton_Click"/>
+            <Button Name="HistoryButton" Content="History" Width="100" Margin="5" Click="HistoryButton_Click"/>
+
         </StackPanel>
 
         <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,79,0,0">
