--- a/UserList.xaml
+++ b/UserList.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="User List" Height="450" Width="800">
     <Grid>
-        <DataGrid x:Name="UserDataGrid" HorizontalAlignment="Left" Height="300" VerticalAlignment="Top" Width="780" Margin="10,10,0,0"/>
-        <Button x:Name="button_Back" Content="Back" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="100" Height="30" Margin="10,0,0,10" Click="button_Back_Click"/>
+        <DataGrid Name="UserDataGrid" AutoGenerateColumns="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10"/>
+        <Button Name="button_Back" Content="Back" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10" Click="button_Back_Click"/>
     </Grid>
 </Window>
