--- a/ForgotPasswordAdmin.xaml
+++ b/ForgotPasswordAdmin.xaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d"
         Title="Admin Forgot Password" Height="500" Width="800">
 
-    <Grid>
+    <Grid Background="#FFF9F6F4">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
