--- a/AddProfilePic.xaml
+++ b/AddProfilePic.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="AddProfilePic" Height="500" Width="800">
-    <Grid>
+    <Grid Background="#FFF9F6F4">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
