--- a/AdminsLogIn.xaml
+++ b/AdminsLogIn.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="AdminsLogIn" Height="500" Width="800">
-    <Grid>
+    <Grid Background="#FFF9F6F4">
         <!-- Back Button -->
         <Button Content="Back" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0"
                 Width="54" Height="23" Background="DarkGray" Foreground="White" FontSize="12" Padding="10,0"
