--- a/CreateUser.xaml
+++ b/CreateUser.xaml
@@ -2,7 +2,17 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Create User" Height="500" Width="800">
-    <Grid Background="White">
+
+
+
+
+    <Grid Background="#FFF9F6F4">
+        <Button x:Name="button_Exit" Grid.Row="0" Margin="10,10,0,0" Width="54" Height="23"
+                Content="Back" Click="Back_Click"
+                HorizontalAlignment="Left" VerticalAlignment="Top"
+                Background="DarkGray" Foreground="White"
+                FontSize="12" Padding="10,0">
+        </Button>
         <Label x:Name="label1" Content="ADD A USER" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="374,18,0,0" FontFamily="Stencil" FontSize="18" Background="Silver" />
         <Label x:Name="label2" Content="First Name" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="55,108,0,0" />
         <Label x:Name="label3" Content="Last Name" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="55,166,0,0" />
