--- a/EditUser.xaml
+++ b/EditUser.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Edit User" Height="500" Width="800">
-    <Grid>
+    <Grid Background="#FFF9F6F4">
         <Label x:Name="UserIdLabel" Content="User ID:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,50,0,0"/>
         <TextBox x:Name="UserIdTextBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="150,50,0,0" IsReadOnly="True"/>
 
