--- a/Expenses.xaml
+++ b/Expenses.xaml
@@ -16,7 +16,8 @@
 
         <Grid>
             <Button Name="BackButton" Content="Back" HorizontalAlignment="Left" VerticalAlignment="Top" 
-                    Margin="10" Width="60" Height="30" Click="BackButton_Click"/>
+                    Margin="10" Width="60" Height="30" Click="BackButton_Click" Background="DarkGray" 
+                    Foreground="White" FontSize="12" Padding="10,0"/>
             <Button Name="SettingsButton" Content="⚙" HorizontalAlignment="Right" VerticalAlignment="Top" 
                     Margin="10" Width="40" Height="40" Click="SettingsButton_Click"/>
         </Grid>
