--- a/History.xaml
+++ b/History.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="History" Height="500" Width="800">
-    <Grid>
+    <Grid Background="#FFF9F6F4">
         <Button x:Name="BackButton" Content="Back" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Margin="10,10,0,0" Click="button1_Click"/>
 
         <TextBlock Text="Search by Year and Month (e.g., 2023 05)" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,40,0,0"/>
