--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Main Page" Height="500" Width="800" Background="White">
-    <Grid>
+    <Grid Background="#FFF9F6F4">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
