--- a/ResetPassw.xaml
+++ b/ResetPassw.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Reset Password" Height="500" Width="800">
-    <Grid Margin="20">
+    <Grid Margin="20" Background="#FFF9F6F4">
         <Grid.RowDefinitions>
             <!-- Smaller top spacer to shift content up -->
             <RowDefinition Height="2*"/>
