--- a/UpdatePasswordWindow.xaml
+++ b/UpdatePasswordWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Update Password" Height="500" Width="800">
-    <Grid>
+    <Grid Background="#FFF9F6F4">
         <TextBlock Text="Old Password:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <PasswordBox x:Name="oldPasswordBox" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Width="360"/>
 
