--- a/UserList.xaml
+++ b/UserList.xaml
@@ -2,8 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="User List" Height="500" Width="800">
-    <Grid>
+    <Grid Background="#FFF9F6F4">
         <DataGrid Name="UserDataGrid" AutoGenerateColumns="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10"/>
-        <Button Name="button_Back" Content="Back" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10" Click="button_Back_Click"/>
+        <Button Name="button_Back" Content="Back" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10" Click="button_Back_Click"
+                Background="DarkGray" 
+            Foreground="White" FontSize="12" Padding="10,0"/>
     </Grid>
 </Window>
