--- a/AdminSettings.xaml
+++ b/AdminSettings.xaml
@@ -1,12 +1,21 @@
 ﻿<Window x:Class="FinalFinanceTrack.AdminSettings"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FinalFinanceTrack"
-        mc:Ignorable="d"
-        Title="AdminSettings" Height="500" Width="800">
+        Title="Admin Settings" Height="500" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <!-- Title Text -->
+        <TextBlock Text="Admin Settings" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" Margin="20"/>
+
+        <!-- Buttons -->
+        <StackPanel Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Button Content="Back to Main Page" Width="200" Height="40" Margin="10" Click="BackToMainPage_Click"/>
+            <Button Content="Update Password" Width="200" Height="40" Margin="10" Click="UpdatePassword_Click"/>
+            <Button Content="Log Out" Width="200" Height="40" Margin="10" Click="LogOut_Click"/>
+        </StackPanel>
     </Grid>
 </Window>
