--- a/Income.xaml
+++ b/Income.xaml
@@ -41,7 +41,7 @@
             </ComboBox>
             <TextBlock Text="Date" FontSize="18" FontWeight="Bold" Margin="10"/>
             <DatePicker Name="IncomeDatePicker" Width="200" Margin="10"/>
-            <Button Name="OKButton" Content="OK" Width="200" Margin="10" Click="OKButton_Click"/>
+            <Button Name="OKButton" Content="OK" Width="200" Margin="10" Click="OKButton_LinkClick"/>
 
         </StackPanel>
     </Grid>
