just background only x

--- a/LogIn.xaml
+++ b/LogIn.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Log In" Height="500" Width="800">
 
-    <Grid>
+    <Grid Background="#FFF9F6F4">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
