--- a/UpdatePasswordWindow.xaml
+++ b/UpdatePasswordWindow.xaml
@@ -1,19 +1,18 @@
 ﻿<Window x:Class="FinalFinanceTrack.UpdatePasswordWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Update Password" Height="500" Width="800">
-    <Grid Background="#FFF9F6F4">
-        <TextBlock Text="Old Password:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <PasswordBox x:Name="oldPasswordBox" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Width="360"/>
+        Title="Update Password" Height="400" Width="800">
+    <Grid>
+        <Label Content="Old Password:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,30,0,0"/>
+        <PasswordBox x:Name="oldPasswordBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="150,30,0,0"/>
 
-        <TextBlock Text="New Password:" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top"/>
-        <PasswordBox x:Name="newPasswordBox" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top" Width="360"/>
+        <Label Content="New Password:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,80,0,0"/>
+        <PasswordBox x:Name="newPasswordBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="150,80,0,0"/>
 
-        <TextBlock Text="Confirm Password:" HorizontalAlignment="Left" Margin="10,130,0,0" VerticalAlignment="Top"/>
-        <PasswordBox x:Name="confirmPasswordBox" HorizontalAlignment="Left" Margin="10,150,0,0" VerticalAlignment="Top" Width="360"/>
+        <Label Content="Confirm Password:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,130,0,0"/>
+        <PasswordBox x:Name="confirmPasswordBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="150,130,0,0"/>
 
-        <Button Content="OK" HorizontalAlignment="Left" Margin="10,200,0,0" VerticalAlignment="Top" Width="100" Click="OkButton_Click"/>
-        <Button Content="Cancel" HorizontalAlignment="Left" Margin="120,200,0,0" VerticalAlignment="Top" Width="100" Click="CancelButton_Click"/>
-        <Button Content="Back to Settings" HorizontalAlignment="Left" Margin="230,200,0,0" VerticalAlignment="Top" Width="140" Click="BackToSettingsButton_Click"/>
+        <Button Content="OK" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="80,180,0,0" Click="OkButton_Click"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="200,180,0,0" Click="CancelButton_Click"/>
     </Grid>
 </Window>
