--- a/UpdatePasswordWindow.xaml
+++ b/UpdatePasswordWindow.xaml
@@ -1,18 +1,21 @@
 ﻿<Window x:Class="FinalFinanceTrack.UpdatePasswordWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Update Password" Height="400" Width="800">
+        Title="Update Password" Height="500" Width="800">
     <Grid>
-        <Label Content="Old Password:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,30,0,0"/>
-        <PasswordBox x:Name="oldPasswordBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="150,30,0,0"/>
+        <Label Content="Email:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,30,0,0"/>
+        <TextBox x:Name="emailTextBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="150,30,0,0"/>
 
-        <Label Content="New Password:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,80,0,0"/>
-        <PasswordBox x:Name="newPasswordBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="150,80,0,0"/>
+        <Label Content="Old Password:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,80,0,0"/>
+        <PasswordBox x:Name="oldPasswordBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="150,80,0,0"/>
 
-        <Label Content="Confirm Password:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,130,0,0"/>
-        <PasswordBox x:Name="confirmPasswordBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="150,130,0,0"/>
+        <Label Content="New Password:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,130,0,0"/>
+        <PasswordBox x:Name="newPasswordBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="150,130,0,0"/>
 
-        <Button Content="OK" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="80,180,0,0" Click="OkButton_Click"/>
-        <Button Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="200,180,0,0" Click="CancelButton_Click"/>
+        <Label Content="Confirm Password:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,180,0,0"/>
+        <PasswordBox x:Name="confirmPasswordBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="150,180,0,0"/>
+
+        <Button Content="OK" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="80,230,0,0" Click="OkButton_Click"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="200,230,0,0" Click="CancelButton_Click"/>
     </Grid>
 </Window>
