--- a/CreateUser.xaml
+++ b/CreateUser.xaml
@@ -1,11 +1,7 @@
 ﻿<Window x:Class="FinalFinanceTrack.CreateUser"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Create User" Height="500" Width="800">
-
-
-
-
+        Title="Create User" Height="600" Width="800">
     <Grid Background="#FFF9F6F4">
         <Button x:Name="button_Exit" Grid.Row="0" Margin="10,10,0,0" Width="54" Height="23"
                 Content="Back" Click="button_Exit_Click"
@@ -23,7 +19,14 @@
         <TextBox x:Name="EmailAddress_textbox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="357" Margin="181,215,0,0" />
         <PasswordBox x:Name="Password_textbox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="357" Margin="148,269,0,0" />
 
+        <!-- Security Questions -->
+        <Label Content="Security Question 1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="55,330,0,0" />
+        <TextBox x:Name="SecurityQuestion1_textbox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="357" Margin="181,330,0,0" />
+        <Label Content="Security Question 2" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="55,380,0,0" />
+        <TextBox x:Name="SecurityQuestion2_textbox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="357" Margin="181,380,0,0" />
+        <Label Content="Security Question 3" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="55,430,0,0" />
+        <TextBox x:Name="SecurityQuestion3_textbox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="357" Margin="181,430,0,0" />
 
-        <Button x:Name="button_createuser" Content="CREATE USER" HorizontalAlignment="Left" VerticalAlignment="Top" Width="150" Height="46" Margin="512,415,0,0" Click="button_createuser_Click" Background="LightGray" />
+        <Button x:Name="button_createuser" Content="CREATE USER" HorizontalAlignment="Left" VerticalAlignment="Top" Width="150" Height="46" Margin="512,500,0,0" Click="button_createuser_Click" Background="LightGray" />
     </Grid>
 </Window>
